fix(styles): fix issues with progress indicator overflow text wrapping [ci visual] (#2947)
* fix(styles): fix issues with progress indicator overflow text wrapping

* fix(styles): add max width

* feat(styles): ci [ci visual]

* fix(styles): trigger chromatic checks [ci visual]

--- a/src/styles/progress-indicator.scss
+++ b/src/styles/progress-indicator.scss
@@ -100,8 +100,9 @@ $fd-progress-indicator-states: (
 
     @include fd-set-padding-left(0.5rem);
 
-    line-height: 1;
     overflow: hidden;
+    white-space: normal;
+    max-width: 95vw;
   }
 
   &__overflow-close {
